--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,12 @@
-spring.application.name=schedule
+spring:
+  config:
+    import:
+      - classpath:application-datasource.yml
+      - classpath:application-session.yml
+  jpa:
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
